--- a/sample thesis.tex
+++ b/sample thesis.tex
@@ -63,10 +63,10 @@
 	\end{center}
 	\vfill
 	Author: James Donahue \\ 
-	Vogelhüttendeich 114 \\ 
-	21107 Hamburg DE \\ 
+	address line 1 \\ 
+	address line 2 \\ 
 %	Fachrichtung:  \\ 
-	Matrikelnummer: 7017158\\[2mm]
+	Matrikelnummer: \\[2mm]
 %	( Advisor: Prof. Dr. Olaf Posch ) \\ 
 %	( Zweitgutachter: )	% bei Bachelor-/Master-/Diplomarbeit bitte angeben, ansonsten weglassen
 \begin{center}
@@ -103,7 +103,7 @@
 %%%% Beginn der Arbeit
 \pagenumbering{arabic} % Umstellung auf Arabische Ziffern
 
-\input{Chapter1} %Have a .tex file with the name "Chapter1" etc
+\input{Chapter1} % Save a .tex file with the name "Chapter1" etc
 \input{Chapter2}
 \input{Chapter3}
 \input{Chapter4}
